--- a/_config.yml
+++ b/_config.yml
@@ -10,14 +10,14 @@ site-twitter: shivangtrivedi #if your site has a twitter account, enter it here
 
 # Author Settings
 author: Shivang Trivedi # add your name
-author-img: david-freeman.jpg # add your photo
+author-img: david-freeman.jpg # add your photo 
 about-author: I am a web developer focusing on front-end development. Always hungry to keep learning. # add description
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
-social-github: artemsheludko # add your Github handle
+social-github: # add your Github handle
 social-linkedin: # add your Linkedin handle
 social-email: # add your Email address
-
+social-youtube: comedyfactoryindia # youtube
 # Disqus
 discus-identifier: mr-brown # add your discus identifier
 
