--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ social-facebook: # add your Facebook handle
 social-github: # add your Github handle
 social-linkedin: # add your Linkedin handle
 social-email: # add your Email address
-social-youtube: https://www.youtube.com/channel/UCjPTSAodUFkCMqLrXOFHrug?view_as=subscriber # youtube
+social-youtube: UCjPTSAodUFkCMqLrXOFHrug?view_as=subscriber # youtube
 # Disqus
 discus-identifier: mr-brown # add your discus identifier
 
