--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Shivang Trivedi
+title: Shivang J Trivedi
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -6,20 +6,20 @@ description: > # this means to ignore newlines until "baseurl:"
 permalink: ':title/'
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-site-twitter: shivangtrivedi #if your site has a twitter account, enter it here
+site-twitter: @sjtrivedi31 #if your site has a twitter account, enter it here
 
 # Author Settings
-author: Shivang Trivedi # add your name
-author-img: david-freeman.jpg # add your photo 
-about-author: I am a web developer focusing on front-end development. Always hungry to keep learning. # add description
-social-twitter: # add your Twitter handle
-social-facebook: # add your Facebook handle
-social-github: # add your Github handle
-social-linkedin: # add your Linkedin handle
-social-email: # add your Email address
+author: Shivang J Trivedi # add your name
+author-img: sjtrivedi.jpg # add your photo 
+about-author: I am essentially a person with SARCASTIC mind and SPIRITUAL nature.Perpetually passionate about MECHANICAL TERMS.Incessantly love in teaching.  # add description
+social-twitter: @sjtrivedi31 # add your Twitter handle
+social-facebook: ShivAng J TriVedi # add your Facebook handle
+social-github: sjtrivedi # add your Github handle
+social-linkedin: Shivang J Trivedi # add your Linkedin handle
+social-email: sd.trvd3157@gmail.com # add your Email address
 social-youtube: UCjPTSAodUFkCMqLrXOFHrug? # youtube
 # Disqus
-discus-identifier: mr-brown # add your discus identifier
+discus-identifier: mr-strange # add your discus identifier
 
 # Tracker
 analytics: # Google Analytics
