--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 title: Shivang J Trivedi
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Passionate MECHANICAL engineer having incessant love in TEACHING.
+  Sarcastic minded with spiritual nature.
+  I have an experience in CNC MILLIMG also proficient in coding the design with G-CODE and M-CODE. 
 permalink: ':title/'
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
@@ -11,7 +11,9 @@ site-twitter: @sjtrivedi31 #if your site has a twitter account, enter it here
 # Author Settings
 author: Shivang J Trivedi # add your name
 author-img: sjtrivedi.jpg # add your photo 
-about-author: I am essentially a person with SARCASTIC mind and SPIRITUAL nature.Perpetually passionate about MECHANICAL TERMS.Incessantly love in teaching.  # add description
+about-author: I am essentially a person with SARCASTIC mind and SPIRITUAL nature.
+Perpetually passionate about MECHANICAL TERMS.
+Incessant love in teaching.  # add description
 social-twitter: @sjtrivedi31 # add your Twitter handle
 social-facebook: ShivAng J TriVedi # add your Facebook handle
 social-github: sjtrivedi # add your Github handle
