--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: > # this means to ignore newlines until "baseurl:"
 permalink: ':title/'
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-site-twitter: @sjtrivedi31 #if your site has a twitter account, enter it here
+site-twitter: Shivang J Trivedi #if your site has a twitter account, enter it here
 
 # Author Settings
 author: Shivang J Trivedi # add your name
@@ -14,7 +14,7 @@ author-img: sjtrivedi.jpg # add your photo
 about-author: I am essentially a person with SARCASTIC mind and SPIRITUAL nature.
 Perpetually passionate about MECHANICAL TERMS.
 Incessant love in teaching.  # add description
-social-twitter: @sjtrivedi31 # add your Twitter handle
+social-twitter: Shivang J Trivedi # add your Twitter handle
 social-facebook: ShivAng J TriVedi # add your Facebook handle
 social-github: sjtrivedi # add your Github handle
 social-linkedin: Shivang J Trivedi # add your Linkedin handle
