--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ social-linkedin: Shivang J Trivedi # add your Linkedin handle
 social-email: sd.trvd3157@gmail.com # add your Email address
 social-youtube: UCjPTSAodUFkCMqLrXOFHrug? # youtube
 # Disqus
-discus-identifier: mr-strange # add your discus identifier
+# discus-identifier: mr-strange # add your discus identifier
 
 # Tracker
 analytics: # Google Analytics
