--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ about-author: I am essentially a person with SARCASTIC mind and SPIRITUAL nature
 Perpetually passionate about MECHANICAL TERMS.
 Incessant love in teaching. # add description
 social-twitter: sjtrivedi31 # add your Twitter handle
-social-facebook: ShivAng J TriVedi # add your Facebook handle
+social-facebook: sjtrivedi3157 # add your Facebook handle
 social-github: sjtrivedi # add your Github handle
 social-linkedin: Shivang J Trivedi # add your Linkedin handle
 social-email: sd.trvd3157@gmail.com # add your Email address
