--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,10 @@ site-twitter: sjtrivedi31 #if your site has a twitter account, enter it here
 # Author Settings
 author: Shivang J Trivedi # add your name
 author-img: sjtrivedi.jpg # add your photo 
-about-author: I am essentially a person with SARCASTIC mind and SPIRITUAL nature.
-Perpetually passionate about MECHANICAL TERMS.
-Incessant love in teaching. # add description
+about-author: >
+  I am essentially a person with SARCASTIC mind and SPIRITUAL nature.
+  Perpetually passionate about MECHANICAL TERMS.
+  Incessant love in teaching. # add description
 social-twitter: sjtrivedi31 # add your Twitter handle
 social-facebook: sjtrivedi3157 # add your Facebook handle
 social-github: sjtrivedi # add your Github handle
