--- a/_config.yml
+++ b/_config.yml
@@ -11,14 +11,11 @@ site-twitter: sjtrivedi31 #if your site has a twitter account, enter it here
 # Author Settings
 author: Shivang J Trivedi # add your name
 author-img: sjtrivedi.jpg # add your photo 
-about-author: >
-  I am essentially a person with SARCASTIC mind and SPIRITUAL nature.
-  Perpetually passionate about MECHANICAL TERMS.
-  Incessant love in teaching. # add description
+about-author: I am essentially a person with SARCASTIC mind and SPIRITUAL nature. Perpetually passionate about MECHANICAL TERMS. Incessant love in teaching.
 social-twitter: sjtrivedi31 # add your Twitter handle
 social-facebook: sjtrivedi3157 # add your Facebook handle
 social-github: sjtrivedi # add your Github handle
-social-linkedin: Shivang J Trivedi # add your Linkedin handle
+social-linkedin: sjtrivedi31 # add your Linkedin handle
 social-email: sd.trvd3157@gmail.com # add your Email address
 social-youtube: UCjPTSAodUFkCMqLrXOFHrug? # youtube
 # Disqus
